--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lint-staged": "^10.4.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.28",
     "typescript": "^4.0.3"
   },
   "husky": {
@@ -31,5 +33,8 @@
     "*.{js,ts,tsx}": [
       "eslint --fix"
     ]
+  },
+  "dependencies": {
+    "pg": "^8.3.3"
   }
 }
