! Add skipLibCheck in tsconfig to avoid unnecessary lib checking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "sourceMap": true,
     "outDir": "./dist",
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "removeComments": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
