--- a/.ormconfig.json
+++ b/.ormconfig.json
@@ -2,7 +2,7 @@
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
-  "username": "gianfranco",
+  "username": "postgres",
   "password": "",
   "database": "reddit-clone",
   "entities": ["dist/entities/*.js"],
