--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
@@ -37,6 +38,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.18.1",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "pg": "^8.3.3"
