--- a/package.json
+++ b/package.json
@@ -37,10 +37,16 @@
     ]
   },
   "dependencies": {
+    "@types/connect-redis": "^0.0.15",
+    "@types/express-session": "^1.17.3",
+    "@types/redis": "^2.8.28",
     "apollo-server-express": "^2.18.1",
     "bcrypt": "^5.0.0",
+    "connect-redis": "^5.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.3.0",
-    "pg": "^8.3.3"
+    "pg": "^8.3.3",
+    "redis": "^3.0.2"
   }
 }
