--- a/reddit-clone-web/package.json
+++ b/reddit-clone-web/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/theme-tools": "1.0.0",
     "@emotion/react": "11.1.1",
     "@emotion/styled": "11.0.0",
+    "formik": "^2.2.6",
     "framer-motion": "^2.9.4",
     "next": "latest",
     "react": "^17.0.1",
