--- a/reddit-clone-api/package.json
+++ b/reddit-clone-api/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
@@ -43,6 +44,7 @@
     "apollo-server-express": "^2.18.1",
     "bcrypt": "^5.0.0",
     "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
