--- a/reddit-clone-web/package.json
+++ b/reddit-clone-web/package.json
@@ -6,9 +6,11 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint 'src/**/*.{ts,tsx}' --quiet --fix"
+    "lint": "eslint 'src/**/*.{ts,tsx}' --quiet --fix",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.6",
     "@chakra-ui/icons": "^1.0.0",
     "@chakra-ui/react": "^1.0.0",
     "@chakra-ui/theme-tools": "1.0.0",
@@ -16,11 +18,13 @@
     "@emotion/styled": "11.0.0",
     "formik": "^2.2.6",
     "framer-motion": "^2.9.4",
+    "graphql": "^15.4.0",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.19.4",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
@@ -32,7 +36,10 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
-    "typescript": "4.0.5"
+    "typescript": "4.0.5",
+    "@graphql-codegen/typescript": "1.19.0",
+    "@graphql-codegen/typescript-operations": "1.17.12",
+    "@graphql-codegen/typescript-react-apollo": "2.2.1"
   },
   "husky": {
     "hooks": {
