--- a/reddit-clone-api/package.json
+++ b/reddit-clone-api/package.json
@@ -14,6 +14,8 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.2",
+    "@types/nodemailer": "^6.4.0",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "^7.10.0",
@@ -40,7 +42,6 @@
   "dependencies": {
     "@types/connect-redis": "^0.0.15",
     "@types/express-session": "^1.17.3",
-    "@types/redis": "^2.8.28",
     "apollo-server-express": "^2.18.1",
     "bcrypt": "^5.0.0",
     "connect-redis": "^5.0.0",
@@ -48,7 +49,9 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
+    "ioredis": "^4.19.4",
+    "nodemailer": "^6.4.17",
     "pg": "^8.3.3",
-    "redis": "^3.0.2"
+    "uuid": "^8.3.2"
   }
 }
