--- a/reddit-clone-web/package.json
+++ b/reddit-clone-web/package.json
@@ -25,6 +25,9 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.19.4",
+    "@graphql-codegen/typescript": "1.19.0",
+    "@graphql-codegen/typescript-operations": "1.17.12",
+    "@graphql-codegen/typescript-react-apollo": "2.2.1",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
@@ -36,10 +39,8 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
-    "typescript": "4.0.5",
-    "@graphql-codegen/typescript": "1.19.0",
-    "@graphql-codegen/typescript-operations": "1.17.12",
-    "@graphql-codegen/typescript-react-apollo": "2.2.1"
+    "sass": "^1.32.0",
+    "typescript": "4.0.5"
   },
   "husky": {
     "hooks": {
