--- a/reddit-clone-api/package.json
+++ b/reddit-clone-api/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
+    "dev": "nodemon -r dotenv/config dist/index.js",
     "start": "node dist/index.js",
     "lint": "eslint 'src/**/*.{ts,tsx}' --quiet --fix"
   },
@@ -46,6 +46,7 @@
     "bcrypt": "^5.0.0",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
