--- a/reddit-clone-api/package.json
+++ b/reddit-clone-api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "watch": "tsc -w",
     "dev": "nodemon -r dotenv/config dist/index.js",
     "start": "node dist/index.js",
