--- a/reddit-clone-api/.env.example
+++ b/reddit-clone-api/.env.example
@@ -1,5 +1,5 @@
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/reddit-clone
-REDIS_URL=127.0.0.1:6379
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
 PORT=4000
 SESSION_SECRET=dummy-secret
 CORS_ORIGIN=http://localhost:3000
