--- a/reddit-clone-web/package.json
+++ b/reddit-clone-web/package.json
@@ -21,7 +21,8 @@
     "graphql": "^15.4.0",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.19.4",
